versions/v0.16/modules/en/pages/reference/ref-crd-schema.adoc
= {product_name} CRD Schema Summary
:revdate: 2026-02-05
:page-revdate: {revdate}
:page-aliases: /ref-crd-schema

This table summarizes the Custom Resource Definitions (CRDs) used in *{product_name}*, including their purpose and top-level schema properties. Each CRD defines how {product_name} manages applications, deployments, and cluster configurations.

[cols="1,4,2,2", options="header"]
|===
| CRD | Description | Top-level Properties | Reference

| *Bundle v1alpha1*
| Bundle contains the resources of an application and its deployment options. It is deployed as a Helm chart to target clusters. When a GitRepo is scanned, it produces one or more bundles. Bundles are collections of resources deployed to one or more clusters and represent the fundamental deployment unit used in {product_name}. The contents of a Bundle may include Kubernetes manifests, Kustomize configuration, or Helm charts. Regardless of the source, the contents are dynamically rendered into a Helm chart by the agent and installed into the downstream cluster as a Helm release.
| `apiVersion, kind, metadata, spec, status`
| xref:attachment$crds/bundle_v1alpha1.json[Bundle v1alpha1]

| *BundleDeployment v1alpha1*
| BundleDeployment is used internally by {product_name} and should not be used directly. When a Bundle is deployed to a cluster, an instance of a Bundle is called a BundleDeployment. It represents the state of that Bundle on a specific cluster with cluster-specific customizations. The Fleet agent is aware only of BundleDeployment resources created for the cluster it manages.
| `apiVersion, kind, metadata, spec, status`
| xref:attachment$crds/bundledeployment_v1alpha1.json[BundleDeployment v1alpha1]

| *BundleNamespaceMapping v1alpha1*
| BundleNamespaceMapping maps bundles to clusters in other namespaces.
| `apiVersion, bundleSelector, kind, metadata, namespaceSelector`
| xref:attachment$crds/bundlenamespacemapping_v1alpha1.json[BundleNamespaceMapping v1alpha1]

| *Cluster v1alpha1*
| Cluster corresponds to a Kubernetes cluster. {product_name} deploys bundles to targeted clusters, referred to as downstream clusters. In a single-cluster deployment, the Fleet cluster acts as both manager and downstream cluster.
| `apiVersion, kind, metadata, spec, status`
| xref:attachment$crds/cluster_v1alpha1.json[Cluster v1alpha1]

| *ClusterGroup v1alpha1*
| ClusterGroup is a reusable selector used to target a group of clusters.
| `apiVersion, kind, metadata, spec, status`
| xref:attachment$crds/clustergroup_v1alpha1.json[ClusterGroup v1alpha1]

| *ClusterRegistration v1alpha1*
| ClusterRegistration is used internally by {product_name} and should not be used directly.
| `apiVersion, kind, metadata, spec, status`
| xref:attachment$crds/clusterregistration_v1alpha1.json[ClusterRegistration v1alpha1]

| *ClusterRegistrationToken v1alpha1*
| ClusterRegistrationToken is used by agents to register a new cluster.
| `apiVersion, kind, metadata, spec, status`
| xref:attachment$crds/clusterregistrationtoken_v1alpha1.json[ClusterRegistrationToken v1alpha1]

| *Content v1alpha1*
| Content is used internally by {product_name} and should not be used directly. It contains the resources from a bundle for a specific target cluster.
| `apiVersion, content, kind, metadata, sha256sum`
| xref:attachment$crds/content_v1alpha1.json[Content v1alpha1]

| *GitRepo v1alpha1*
| GitRepo describes a Git repository watched by {product_name}. The resource contains the necessary information to deploy the repository, or parts of it, to target clusters.
| `apiVersion, kind, metadata, spec, status`
| xref:attachment$crds/gitrepo_v1alpha1.json[GitRepo v1alpha1]

| *GitRepoRestriction v1alpha1*
| *Deprecation planned.* Use xref:ref-policy.adoc[Policy] instead. GitRepoRestriction will be deprecated in v0.17 and may be removed as soon as v0.18. It has known security limitations (unanchored regex patterns, no coverage of HelmOp or Bundle resources) and migration is strongly recommended. See xref:explanations/multi-tenancy.adoc[Multi-Tenancy]. GitRepoRestriction optionally restricts GitRepo options within the same namespace.
| `allowedClientSecretNames, allowedRepoPatterns, allowedServiceAccounts, allowedTargetNamespaces, apiVersion, defaultClientSecretName, defaultServiceAccount, kind, metadata`
| xref:attachment$crds/gitreporestriction_v1alpha1.json[GitRepoRestriction v1alpha1]

| *HelmOp v1alpha1*
| HelmOp describes Helm chart information required to deploy a chart to target clusters.
| `apiVersion, kind, metadata, spec, status`
| xref:attachment$crds/helmop_v1alpha1.json[HelmOp v1alpha1]

| *ImageScan v1alpha1*
| JSON schema for ImageScan (v1alpha1) in group `fleet.cattle.io`.
| `apiVersion, kind, metadata, spec, status`
| xref:attachment$crds/imagescan_v1alpha1.json[ImageScan v1alpha1]

| *Policy v1alpha1*
| Policy restricts what GitRepo, HelmOp, and Bundle resources in the same namespace may do. It is the multi-tenancy mechanism in {product_name}.
| `allowedServiceAccounts, apiVersion, gitRepo, helmOp, kind, metadata, requireServiceAccount`
| xref:attachment$crds/policy_v1alpha1.json[Policy v1alpha1]

| *Schedule v1alpha1*
| Schedule represents a deployment schedule that determines when deployments are allowed or restricted.
| `apiVersion, kind, metadata, spec, status`
| xref:attachment$crds/schedule_v1alpha1.json[Schedule v1alpha1]

|===

For more information, refer to https://github.com/rancher/fleet/blob/main/charts/fleet-crd/templates/crds.yaml[fleet-crds.yaml].
